--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TYPE = mysql
 HOSTNAME = 127.0.0.1
 DATABASE = tp6
 USERNAME = root
-PASSWORD = root
+PASSWORD = 123456
 HOSTPORT = 3306
 CHARSET = utf8mb4
 DEBUG = true
